remove text selection

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 html, body, #__next {
   height: 100%;
 }
@@ -246,3 +253,6 @@ body {
   animation: win-bounce 0.5s ease-in-out 3;
 }
 
+.opacity-50 {
+  transition: opacity 0.3s ease;
+}
